# BEM-AI

./: AGENTS.md  README.md  agent.md  pyproject.toml
.github/workflow/: release.yml
.github/workflows/: main.yml
automa_ai/agent_test/: adk_agent_test.py  react_agent_test.py
automa_ai/agents/: __init__.py  adk_agent.py  agent_factory.py  agent_tools.py  langgraph_chatagent.py  langgraph_chatagent_test.py  orchestrator_agent.py  orchestrator_dist_agent.py  orchestrator_local_agent.py  orchestrator_network_agent.py  react_langgraph_agent.py  remote_agent.py
automa_ai/blackboard/: __init__.py  errors.py  instructions.py  models.py  schema.py  store.py  tools.py
automa_ai/blackboard/backends/: __init__.py  dynamodb_json.py  local_json.py  s3_json.py
automa_ai/client/: simple_client.py  ui_util.py
automa_ai/common/: agent_executor.py  agent_registry.py  base_agent.py  mcp_registry.py  message_accumulator.py  message_accumulator_test.py  response_parser.py  response_parser_test.py  retriever.py  setup_logging.py  types.py  utils.py  utils_test.py  workflow.py
automa_ai/common/retrieval/: __init__.py  embedding_factory.py  registry.py  resolve.py
automa_ai/common/retrieval/providers/: base.py
automa_ai/config/: __init__.py  blackboard.py  tools.py
automa_ai/mcp_servers/: agent_card_server.py  client.py  server.py  test_agent_card_matching.py  test_cases.json
automa_ai/mcp_servers/eplus_doc/: eplus_doc_client.py  eplus_doc_server.py
automa_ai/memory/: chroma_memory_store.py  manager.py  memory_stores.py  memory_types.py  sqlite_memory_store.py
automa_ai/metrics/: collector.py  extractor.py
automa_ai/network/: agentic_network.py  chat_network.py  task_local_workflow.py  task_workflow.py
automa_ai/prompt_engineering/: prompt_template.py
automa_ai/retrieval/: __init__.py  base.py  config.py  embedding_factory.py  registry.py  resolve.py
automa_ai/retrieval/providers/: __init__.py  base.py
automa_ai/skills/: README.md  __init__.py  config.py  config_test.py  manager.py  manager_test.py  tools.py  tools_test.py
automa_ai/tools/: __init__.py  base.py  registry.py
automa_ai/tools/web_search/: __init__.py  config.py  providers.py  rerank.py  scraper.py  tool.py
docs/: blackboard.md  tools.md
examples/: web_search_demo.py
examples/code_gbxml/: example.env  gbxml_app.py  readme.md  streamlit_ui.py
examples/code_gbxml/agent_cards/: gbxml_agent.json  planner_agent.json
examples/code_gbxml/app_mcps/: model_mcp.py
examples/code_gbxml/gbxml_file/: SF_model_Output_OS.xml
examples/energycodes_chatbot/: energycode_bot.py  energycode_evaluation.py  energycode_ui.py  helpdesk_retriever.py
examples/energycodes_chatbot/mcp_server/: mcp_server.py
examples/energycodes_chatbot/pipeline/: combined_outputs_v2.json  embed_pipeline.py
examples/eplus_chatbot/: eplus_chatbot.py
examples/eplus_mcp_demo/: README.md  eplus_chatbot.py  run_all.sh  sample.env  ui.py
examples/eplus_mcp_demo/energyplus_mcp_server/: config.py  energyplus_tools.py  server.py
examples/eplus_mcp_demo/energyplus_mcp_server/sample_files/: 1ZoneEvapCooler.idf
examples/eplus_mcp_demo/energyplus_mcp_server/utils/: __init__.py  diagrams.py  electric_equipment_utils.py  lights_utils.py  output_meters.py  output_variables.py  path_utils.py  people_utils.py  schedules.py
examples/eplus_text_generator/: eplus_generator.py
examples/eplus_text_generator/eplus_schema/: eplus_server.py
examples/ruleset_checking/: rct_chatbot.py  rct_ui.py  ruleset_retriever.py
examples/ruleset_checking/pipeline/: embed_pipeline.py  retriever_test.py  train_data.jsonl
examples/sim_bem_network/: README.md  example.env  run_all.sh  sim_bem_network_app.py  sim_bem_network_orchestrator.py  streamlit_ui.py
examples/sim_bem_network/agent_cards/: envelope_agent.json  lighting_agent.json  orchestrator_agent.json  output_agent.json  planner_agent.json  simulation_agent.json  template_agent.json
examples/sim_bem_network/app_mcps/: model_mcp.py  os_mcp.py
examples/sim_chat_demo/: README.md  chatbot.py  example.env  run_all.sh  streamlit_ui.py
examples/sim_chat_stream_demo/: chatbot.py  memory.db
examples/sim_chat_stream_demo/long_term/: chroma.sqlite3
examples/sim_chat_stream_demo/mcp_server/: mcp_server.py
examples/sim_chat_stream_demo/skills/: predict_weather.md
examples/subagent_example/: chatbot.py  streamlit_ui.py
examples/travel_blackboard_demo/: README.md  blackboard_schema.json  multi_agent.py  ui.py
examples/travel_blackboard_demo/agents/: car_card.json  common.py  flight_card.json  hotel_card.json  orchestrator_card.json
examples/travel_blackboard_demo/tests/: test_travel_blackboard_demo.py
tests/: test_agent_registry.py  test_retrieval_resolve.py  test_tools_config.py  test_web_search_http_errors.py  test_web_search_tool.py
tests/blackboard/: test_blackboard_cloud_backends.py  test_blackboard_store.py  test_blackboard_tools.py
tutorial/: agent_dev.ipynb
