[project]
name = "automa_ai"
version = "0.5.0"
description = "PNNL Auto Multi-Agent AI: Dynamic multi-agent system for building applications"
requires-python = ">=3.12"
authors = [{name = "Weili Xu", email = "weili.xu@pnnl.gov"}, {name = "Hanlong, Wan", email = "hanlong.wan@pnnl.gov"}]
license = "BSD-2-Clause"
readme = "README.md"
dependencies = [
    "a2a-sdk>=0.3.22",
    "asyncclick>=8.3.0.7",
    "bs4>=0.0.2",
    "chromadb>=1.4.1",
    "deepeval>=3.7.2",
    "google-adk>=1.24.0",
    "google-genai>=1.62.0",
    "httpx>=0.28.1",
    "jwcrypto>=1.5.6",
    "langchain>=1.2.8",
    "langchain-anthropic>=1.3.1",
    "langchain-aws>=1.2.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-huggingface>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "litellm>=1.79.0",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.3.251219",
    "pydantic>=2.12.3",
    "pyjwt>=2.11.0",
    "streamlit>=1.54.0",
    "uvicorn>=0.40.0",
    "multiprocessing-logging>=0.3.4",
]
packages = [{include = "automa_ai", from = "."}]

# --- Optional dependencies for examples ---
[project.optional-dependencies]
web = [
    "trafilatura>=1.12.2",
    "duckduckgo-search>=7.2.1",
    "rank-bm25>=0.2.2",
    "pyyaml>=6.0.2",
]
rerank = ["sentence-transformers>=3.4.1"]
sim_bem_network = ["openstudio>=3.10.0", "streamlit>=1.51.0"]
sim_chat_demo = ["streamlit>=1.51.0"]
sim_chat_stream_demo = ["streamlit>=1.51.0"]
eplus_mcp_demo = ["eppy>=0.5.63", "matplotlib>=3.10.7", "plotly>=6.4.0"]

[tool.uv]
dev-dependencies = [
    "notebook>=7.4.7",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "black>=25.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."automa_ai.memory_stores"]
default_sqlite = "automa_ai.memory.sqlite_memory_store:SQLiteMemoryStore"
default_chroma = "automa_ai.memory.chroma_memory_store:ChromaVectorMemoryStore"

[project.entry-points."automa_ai.tools"]
web_search = "automa_ai.tools.web_search:build_web_search_tool"
travel_flight_provider = "examples.travel_blackboard_demo.agents.common:build_travel_flight_tool"
travel_hotel_provider = "examples.travel_blackboard_demo.agents.common:build_travel_hotel_tool"
travel_car_provider = "examples.travel_blackboard_demo.agents.common:build_travel_car_tool"
travel_booking_provider = "examples.travel_blackboard_demo.agents.common:build_travel_booking_tool"
